# market-trader

./: .env.example  .gitignore  2026-07-17-market-scanner-investment-system-design.md  2026-07-17-market-trader-foundation.md  README.md  compose.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/config/catalysts/: catalyst-classification-policy-v1.json  catalyst-source-policy-v1.json  catalyst-summary-policy-v1.json  event-risk-policy-v1.json
apps/api/config/options_analysis/: options-analysis-policy-v1.json
apps/api/config/risk/: risk-policy-v1.json
apps/api/config/scanner/: candidate-scoring-v1.json  eligibility-policy-v1.json  eligible-universe-v1.json  market-regime-v1.json  scanner-strategies-v1.json
apps/api/migrations/: env.py
apps/api/scripts/: __init__.py  generate_catalyst_fixtures.py  generate_options_analysis_fixtures.py  generate_paper_lifecycle_fixtures.py  generate_risk_fixtures.py  generate_scanner_fixtures.py  run_recovery_drill.py
apps/api/src/market_trader/: __init__.py  main.py  (+1 more)
apps/api/tests/: auth_helpers.py  db_helpers.py  test_audit_repository.py  test_backup_restore.py  test_config.py  test_config_version_repository.py  test_container_configuration.py  test_db_engine.py  test_decision_repositories.py  test_domain_primitives.py  test_entry_window_policy.py  test_health.py  test_market_data_repository.py  test_market_state_api.py  test_market_state_service.py  test_migrations.py  test_risk_lock_repository.py  test_schedule_planner.py  test_symbol_repository.py  test_trade_lifecycle_repositories.py  test_xnys_calendar.py
(+422 files in other folders)
